data/derived/comb/progs/unify/prog6651.ml.out
Characters 76-80:
  let fixpoint (f,b) = let f1 f2 x= if f2 x=x then false else true in wwhile (f1 f,b);;
                                                                              ^^^^
Error: This expression has type 'a -> bool
       but an expression was expected of type 'a -> 'a * bool
       Type bool is not compatible with type 'a * bool 
